--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/react": "^2.3.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@supabase/supabase-js": "^1.35.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.8",
+    "cypress": "^10.7.0",
+    "framer-motion": "^7.2.1",
+    "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "v6",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^3.1.8",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
