add tabler icons and dayjs

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@solana/wallet-adapter-wallets": "^0.18.7",
     "@solana/web3.js": "^1.56.2",
     "@supabase/supabase-js": "^1.35.6",
+    "@tabler/icons": "^1.93.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "autoprefixer": "^10.4.8",
     "bs58": "^5.0.0",
     "cypress": "^10.7.0",
+    "dayjs": "^1.11.5",
     "framer-motion": "^7.2.1",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
