--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@chakra-ui/react": "^2.3.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@monaco-editor/react": "^4.4.5",
     "@project-serum/anchor": "^0.25.0",
     "@reduxjs/toolkit": "^1.8.5",
     "@solana-mobile/wallet-adapter-mobile": "^0.9.1",
