--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "cypress": "^10.7.0",
     "dayjs": "^1.11.5",
     "framer-motion": "^7.2.1",
+    "marked": "^4.1.0",
     "postcss": "^8.4.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
     "react-redux": "^8.0.2",
     "react-router-dom": "v6",
     "react-scripts": "5.0.1",
